Thu Nov 14 04:06:41 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* po/.cvsignore: Add messages.mo and remove-potcdate.sed.
	* po/it.po: Add missing '=' in charset.

Thu Nov 14 03:53:22 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* po/cs.po: Fix an incorrect C format string.
	* po/da.po: Fix some out-of-sync C format strings and default PO
	  file headers. I've contacted the translator about these.

Thu Nov 14 01:57:42 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* man-db.gnu, man-db.lsm: Document the switch from SourceForge to
	  Savannah.

Mon Nov 11 01:50:28 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c (man): Update the count of found pages with the return
	  value of display_pages(). This should fix the situation where man
	  finds a matching entry in the database, discovers that it's
	  actually a dangling symlink, but fails to print an error message
	  to say that no page was found.

Mon Nov 11 00:47:38 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (OPTIONS): Change \[char173] to \[shc]. The
	  former doesn't appear to display as anything useful these days.
	* man/es_ES.88591/man1/man.man1, man/it_IT.88591/man1/man.man1,
	  man/ja_JP.eucJP/man1/man.man1: Likewise.

Thu Nov  7 02:18:44 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): Don't do access() checks on an empty man_file
	  in the display_to_stdout branch, to avoid problems when running
	  'man -X -l -'. Similar code is already in the other branch. Patch
	  from Peter Muir <iyhi@yahoo.com>.

Thu Nov  7 01:42:52 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Further updates for 2.4.1.
	* docs/ToDo: I think the new-style database is OK now.

Thu Nov  7 01:32:29 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (match_in_directory): Don't use FNM_NOESCAPE flag
	  to fnmatch().
	  (look_for_file): Escape paths and names before passing them to
	  match_in_directory().